# Inventario

./: .cproject  .project  CMakeLists.txt  CMakeLists.txt~  Makefile  Protocolo de comunicacion  Protocolo de comunicacion~
Administrador/: Administrador.cpp  admin_main.cpp  admin_main.cpp~
Administrador/ControlAdmin/: ControlAP.cpp  ControlAP.h  ControlEP.cpp  ControlEP.h  ControlLAV.cpp  ControlLAV.h  ControlLP.cpp  ControlLP.h  admin_ControlAP.cpp  admin_ControlAP.h  admin_ControladorVistaListadoP.cpp  admin_ControladorVistaListadoP.h
Administrador/ModeloAdmin/: Administrador.cpp  Administrador.h  admin_Datos.cpp  admin_Datos.h  admin_ModeloObservable.cpp  admin_ModeloObservable.h  admin_Observer.cpp  admin_Observer.h  admin_Subject.cpp  admin_Subject.h
Administrador/VistaAdmin/: ListaAV.cpp  ListaAV.h  ListaProductos.cpp  ListaProductos.h  ModelComboBoxAreasDeVision.h  TiposCapturadorComboBoxModel.h  VistaAgregarAreaVision.cpp  VistaAgregarAreaVision.h  VistaAgregarProducto.cpp  VistaAgregarProducto.h  VistaEditarAreaVision.cpp  VistaEditarAreaVision.h  VistaEditarProducto.cpp  VistaEditarProducto.h  VistaItemListado.cpp  VistaItemListado.h  VistaListadoAreasDeVision.cpp  VistaListadoAreasDeVision.h  VistaListadoProductos.cpp  VistaListadoProductos.cpp~  VistaListadoProductos.h  VistaStockGeneral.cpp  VistaStockGeneral.h  VistaStockHistorico.cpp  VistaStockHistorico.h  VistaStockPorAV.cpp  VistaStockPorAV.h  VistaVentanaPPAL.cpp  VistaVentanaPPAL.h
Administrador/VistaAdmin/Graficos/: Area.cpp  Area.h  Barra.cpp  Barra.h  DatoGrafico.cpp  DatoGrafico.h  Grafico.cpp  Grafico.h  GraficoDeBarras.cpp  GraficoDeBarras.h  GraficoDeTorta.cpp  GraficoDeTorta.h  PorcionCircular.cpp  PorcionCircular.h  Referencia.cpp  Referencia.h
Cliente/: client_main.cpp  client_main_VistaDescargar.cpp  client_main_VistaEnviar.cpp
Cliente/Control/: client_ControladorVistaDescargaImagenDeProductos.cpp  client_ControladorVistaDescargaImagenDeProductos.h  client_ControladorVistaEnviar.cpp  client_ControladorVistaEnviar.h  productos.xml
Cliente/Modelo/: ThActualizador.cpp  ThActualizador.h  ThEnviadorArchivos.cpp  ThEnviadorArchivos.h  client_ClienteDemo.cpp  client_ClienteDemo.h  client_Data.cpp  client_Data.h  client_ModeloObservable.cpp  client_ModeloObservable.h
Cliente/Vista/: AspectPreservingScalingImage.h  Descargar_Imagenes_Productos.glade  Enviar_Imagen.glade~  ListaImagenesEnOrden.h  Principal.glade  ThReproductorVideo.cpp  ThReproductorVideo.h  VistaCrearVideo.cpp  VistaCrearVideo.h  VistaPreviaImagen.cpp  VistaPreviaImagen.h  VistaSeleccioneFPS.cpp  VistaSeleccioneFPS.h  VistaSeleccioneIntervaloSegundos.cpp  VistaSeleccioneIntervaloSegundos.h  client_AreasDeVisionComboBoxModel.h  client_ModelColumsProductos.cpp  client_ModelColumsProductos.h  client_ModelComboBoxAreasDeVision.h  client_ProductosList.cpp  client_ProductosList.h  client_VistaDescargaImagenDeProductos.cpp  client_VistaDescargaImagenDeProductos.h  client_VistaDescargaImagenDeProductos2.cpp  client_VistaDescargaImagenDeProductos2.h  client_VistaEnviar.cpp  client_VistaEnviar.h  client_VistaPrincipal.cpp  client_VistaPrincipal.h
Common/: client_Cliente.cpp  client_Cliente.h  client_SocketCliente.cpp  client_SocketCliente.h  client_main.cpp  client_main.cpp~  common_AreaDeVision.cpp  common_AreaDeVision.h  common_CommandParser.cpp  common_CommandParser.h  common_Imagen.cpp  common_Imagen.h  common_Imagen.h~  common_ListaProductos.h  common_Mutex.cpp  common_Mutex.h  common_Observer.cpp  common_Observer.h  common_Producto.cpp  common_Producto.h  common_Protocolo.cpp  common_Protocolo.h  common_Socket.cpp  common_Socket.h  common_SocketCliente.cpp  common_SocketCliente.h  common_Stock.h  common_Subject.cpp  common_Subject.h  common_Thread.cpp  common_Thread.h  common_Video.cpp  common_Video.h
Servidor/: CMakeLists.txt  Servidor.cpp  areasdevision.xml  common_AreaDeVision.h  common_Mutex.cpp  common_Mutex.h  common_Producto.cpp  common_Producto.h  common_Socket.cpp  common_Stock.cpp  config.xml  productos.xml  server_BaseDeDatos.cpp  server_BaseDeDatos.h  server_BaseDeDatos.h~  server_DetectorDeObjetos.cpp  server_DetectorDeObjetos.h  server_MonitorBaseDeDatos.cpp  server_MonitorBaseDeDatos.h  server_Operador.cpp  server_Operador.h  server_ParserXML.cpp  server_ParserXML.h  server_Servidor.cpp  server_Servidor.h  server_SocketServidor.cpp  server_SocketServidor.h
